fix: align the nav menu on the header

--- a/match-match-game/src/components/header/header.css
+++ b/match-match-game/src/components/header/header.css
@@ -36,6 +36,9 @@
   display: flex;
   margin-right: 510px;
 }
+.header__nav-menu_margin {
+  margin-right: 590px;
+}
 .header__nav-button {
   width: 33.3%;
   height: 100%;
